logs/wwchartlib.log
Listing '.'...
Listing './bin'...
Listing './doc'...
Listing './doc/wwchartlib'...
Listing './doc/wwchartlib/examples'...
Compiling './doc/wwchartlib/examples/adjustablepiechart.py'...
***   File "./doc/wwchartlib/examples/adjustablepiechart.py", line 34
    print "item adjusted: {}".format(item)
                            ^
SyntaxError: invalid syntax

Compiling './doc/wwchartlib/examples/piechart.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/wwchartlib'...
Listing './lib/python3.5/site-packages/wwchartlib/test'...
Listing './lib/python3.5/site-packages/wwchartlib-0.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
